# Wiedmin-YZE

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
App/: CMakeLists.txt  main.cpp
App/Character/: CharacterWindow.cpp  CharacterWindow.hpp  CharacterWindow.ui
App/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/: CMakeLists.txt  main.cpp
src/Character/: CMakeLists.txt  CharacterWindow.ui
src/Character/Data/: CharacterData.cpp
src/Character/List/: CharacterList.cpp
src/Character/Sheet/: CharacterWindow.cpp  CharacterWindow.ui
src/Character/include/Data/: CharacterData.hpp
src/Character/include/List/: CharacterList.hpp
src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/MainWindow/include/: MainWindow.hpp
tests/: CMakeLists.txt
tests/CharacterTests/: CMakeLists.txt  CharacterListTests.cpp
